src/ShowCard/ShowCard.css
.list {
    width: 100%;
    margin-top: 10px;
    overflow: hidden;
}

.wrapper {
    position:relative;
}

.slider {
    color:white;
    position:absolute;
    margin:auto;
    z-index:99;
    cursor: pointer;
}

.arrowboxleft {
    width: 50px;
    height: 200px;
    background-color:rgba(40, 40, 40, 0.5); 
}

.arrowboxright {
    width: 50px;
    height: 200px;
    background-color: rgba(40, 40, 40, 0.5); 
    transform: translateY(-100%);
    right:10px;
    /* right: 61%; use this if there are only 2 or 3 cards */
    /*right 10px; use this if there are more than 3 cards and delete 'right:61%' */ 
}

.leftarrow {
    top: 0;
    bottom:0;
    left:0;
    margin-left:10px;
    transform:scale(1.8);
}

.rightarrow {
    top: 0;
    bottom:0;
    right:0;
    margin-right:10px;
    transform:scale(1.8);
}

.list-cards:hover {
    transform:scale(1.05);
    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
}



.recommend {
    color: white;
    font-size: 20px;
    font-weight: 500;
    margin-left: 20px;
}

.container {
    margin-left: 50px;
    margin-top: 10px;
    display: flex;
    width: max-content;
    transform: translateX(0px);
    transition: all .5s ease;

}

.forum-posts {
    margin-left: 335px;
    margin-top: 30px;
}

